--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "prueba",
+  "name": "pokeggstats-front",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "ts-standard --fix",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.0.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "lucide-react": "0.316.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.0.1"
+    "tailwind-merge": "2.2.1",
+    "tailwindcss-animate": "1.0.7",
+    "vite-tsconfig-paths": "4.3.1"
   },
   "devDependencies": {
-    "ts-standard": "^12.0.2",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/node": "20.11.9",
+    "@types/react": "18.2.43",
+    "@types/react-dom": "18.2.17",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "autoprefixer": "10.4.17",
+    "postcss": "8.4.33",
+    "tailwindcss": "3.4.1",
+    "ts-standard": "12.0.2",
+    "typescript": "5.3.3",
+    "vite": "5.0.12"
   },
   "eslintConfig": {
     "extends": "./node_modules/ts-standard/eslintrc.json"
