--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
+    "localforage": "1.10.0",
     "lucide-react": "0.316.0",
+    "match-sorter": "6.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.21.3",
+    "sort-by": "0.0.2",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
     "vite-tsconfig-paths": "4.3.1"
@@ -24,6 +28,7 @@
     "@types/node": "20.11.9",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
+    "@types/react-router-dom": "5.3.3",
     "@vitejs/plugin-react-swc": "3.5.0",
     "autoprefixer": "10.4.17",
     "postcss": "8.4.33",
