--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokeggstats-front",
+  "name": "pokevisually-front",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "localforage": "1.10.0",
